--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["immutable_borrow", "mutable_borrow"]
+members = ["immutable_borrow", "mutable_borrow", "taking_ownership"]
